panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__decl_in_global_scope__test_error_declaration_without_type_multiple_qualifiers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type_multiple_qualifiers.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type_multiple_qualifiers.c:1:1]
   │
 1 │ const volatile x;
   │ ───────┬──────  
   │        ╰──────── type missing
───╯
