panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__decl_in_global_scope__test_redeclaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_redeclaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration f~0 `fn() -> int` ∅)
   (declaration f~0 `fn() -> int` ∅)
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (return (42 `int`))))
   (declaration f~0 `fn() -> int` ∅)
   (declaration f~0 `fn() -> int` ∅))

----- stderr -----
